shaking the code to see what falls out

--- a/JTAppleCalendarBonk/OFWCalendarCell.xib
+++ b/JTAppleCalendarBonk/OFWCalendarCell.xib
@@ -10,7 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" restorationIdentifier=" CalendarCell" id="AJ2-kP-FZn" customClass="OFWCalendarCell" customModule="JTAppleCalendarBonk" customModuleProvider="target">
+        <view contentMode="scaleToFill" restorationIdentifier="OFWCalendarCell" id="AJ2-kP-FZn" customClass="OFWCalendarCell" customModule="JTAppleCalendarBonk" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="195" height="156"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
